# pdf-tools

./: .gitignore  CLAUDE.md  DESIGN.md  DOCS.md  PLAN.md  PRODUCT.md  README.md  SPEC.md  build-sidecar.ps1  dev.ps1  package-lock.json  package.json  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  verify.ps1  vite.config.ts
.github/: dependabot.yml
.github/workflows/: security.yml
.impeccable/: design.json
.impeccable/critique/: 2026-05-25T17-05-26Z__whole-project.md
.security/: audit-2026-05-28.md
backend/: http_test.py  main.py  pdftools_server.spec  pyproject.toml  smoke_test.py
backend/routers/: _deps.py  annotate.py  compress.py  convert.py  crop.py  export.py  merge.py  pages.py  redact.py  security.py  split.py  watermark.py
backend/services/: pdf_engine.py  pikepdf_engine.py
scripts/: security-audit.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.test.ts  client.ts
src/components/: AnnotationLayer.tsx  AnnotationsListPanel.tsx  BookmarksPanel.tsx  CommandPalette.tsx  FileDropZone.tsx  InteractivePageCanvas.tsx  KeyboardCheatSheet.tsx  Layout.tsx  MathText.tsx  MenuBar.tsx  MiniMap.tsx  OutlinePanel.tsx  PageThumbnailGrid.tsx  ProcessButton.test.tsx  ProcessButton.tsx  QuickActionBar.tsx  RightPanel.tsx  RightRail.tsx  SearchBar.tsx  SettingsDialog.tsx  TabBar.test.tsx  TabBar.tsx  TabShell.tsx  TextLayer.tsx  ThumbnailSidebar.tsx  ToolCard.test.tsx  ToolCard.tsx
(+19 files in other folders)
