[project]
name = "pdf-tools-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24",
    "pikepdf>=9.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100
