[project]
name = "pdf-tools-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24",
    "pikepdf>=10.7.2",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100

[tool.bandit]
# Scan production code only; exclude the venv, scratch tests, and integration test scripts.
# Test scripts intentionally call urllib.request.urlopen against a hardcoded 127.0.0.1
# address — B310 (url open) is a false positive in that context.
exclude_dirs = [".venv", "tests"]
skips = []

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
